ECA-2218: Use endorsed jars from Glassfish 3 in systemtests
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@12160 37aeb1de-b14b-0410-9a0e-82b28170d228